fix details gap

--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -85,7 +85,7 @@
   }
 }
 @mixin media-query-second-breakpoint {
-  @media (max-width: 758px) {
+  @media (max-width: 759px) {
     @content;
   }
 }
